# MRecover

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.cuda  README.md  next.config.ts  package-lock.json  package.json  pyproject.toml
.github/workflows/: pages.yml
app/: globals.css  layout.tsx  page.module.css  page.tsx
components/: ComparisonSlider.module.css  ComparisonSlider.tsx
mrecover/: __init__.py  cli.py  core.py  hippo_localizer.py  models.py  segmentation.py  utils.py
